--- a/res/xml/gestures.xml
+++ b/res/xml/gestures.xml
@@ -105,4 +105,9 @@
         android:fragment="com.android.settings.gestures.PowerButtonTorchSettings"
 	settings:controller="com.android.settings.gestures.PowerButtonTorchGesturePreferenceController" />
 
+    <Preference
+        android:key="volume_button_music_control_sumary"
+        android:title="@string/volume_button_music_control_title"
+        android:fragment="com.android.settings.gestures.VolumeButtonMusicControlGestureSettings"
+        settings:controller="com.android.settings.gestures.VolumeButtonMusicControlPreferenceController" />
 </PreferenceScreen>
