--- a/res/xml/customisation_extras.xml
+++ b/res/xml/customisation_extras.xml
@@ -16,4 +16,15 @@
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
     android:title="@string/customisation_extras" >
 
+    <PreferenceCategory
+        android:key="hardware_keys_power"
+        android:title="@string/hardware_keys_power_category" >
+
+        <Preference
+            android:key="power_menu"
+            android:title="@string/powermenu_title"
+            android:summary="@string/powermenu_summary"
+            android:fragment="com.pixelizer.fragments.PowerMenu" />
+    </PreferenceCategory>
+
 </PreferenceScreen>
