fuelgauge: add back battery level animation
This adds the battery level animation when entering battery
settings menu. This was dropped in AOSP, but still exists on Pixel's
(At least in DP4).

When a user enters the battery settings menu, the battery icon will
animate
into the current battery level, as well as the battery level text.

This is a revert of: 4a7c8d7
This is a cherry-pick of: a3c528f

Updated for ODR3 (8.1) by @Sirhc95

Change-Id: Ibfe3cc50f192281a0bede670acf9ace1d7523f02
[ jaysonedson@gmail.com: Fixed for android10 ]
Signed-off-by: Jason Edson <jaysonedson@gmail.com>
Signed-off-by: ugly-kid-af <dwarmachine24@gmail.com>

--- a/res/xml/power_usage_summary.xml
+++ b/res/xml/power_usage_summary.xml
@@ -24,9 +24,8 @@
     <com.android.settingslib.widget.LayoutPreference
         android:key="battery_header"
         android:title="@string/summary_placeholder"
-        android:selectable="false"
-        android:layout="@layout/battery_header"
-        settings:controller="com.android.settings.fuelgauge.BatteryHeaderPreferenceController" />
+        android:selectable="true"
+        android:layout="@layout/battery_header" />
 
     <com.android.settings.ui.PreferenceDivider
         android:key="preference_divider_line" />
