--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -170,6 +170,13 @@
         android:summary="@string/display_cutout_force_fullscreen_summary"
         android:fragment="com.android.settings.display.DisplayCutoutForceFullscreenSettings"
         settings:controller="com.android.settings.display.DisplayCutoutForceFullscreenPreferenceController" />
+    
+    <com.android.settings.custom.preference.SystemSettingSwitchPreference
+        android:key="high_touch_sensitivity_enable"
+        android:title="@string/high_touch_sensitivity_title"
+        android:summary="@string/high_touch_sensitivity_summary"
+        android:defaultValue="false"
+        settings:controller="com.android.settings.custom.touch.HighTouchSensitivitySettingsPreferenceController" />
 
     <ListPreference
         android:key="theme"
