Settings: Allow to suppress notifications sound/vibration if screen is ON [2/2]
Signed-off-by: Aftab-111 <ashrafiaftab0@gmail.com>
Change-Id: I9f408ad36c1ff1f128712a2924e655c52419f3f6
Signed-off-by: ugly-kid-af <dwarmachine24@gmail.com>

--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -103,4 +103,8 @@
     <string name="battery_stats_message">Battery usage data will be lost</string>
     <string name="battery_stats_clear">@string/proxy_clear_text</string>
 
+    <!-- Supress notifications if screen is on -->
+    <string name="notification_sound_vib_screen_on_title">Notification sound if active</string>
+    <string name="notification_sound_vib_screen_on_summary">Play sound and vibration for notifications when screen is on</string>
+
 </resources>
