--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -99,7 +99,8 @@
     <string name="doze_double_tap_summary">Pulse notifications by a double tap</string>
 
     <!-- Battery stats reset -->
-    <string name="battery_stats_reset">Reset stats</string>
-    <string name="battery_stats_message">Battery history stats are going to be reset</string>
+    <string name="battery_stats_reset">Clear usage data?</string>
+    <string name="battery_stats_message">Battery usage data will be lost</string>
+    <string name="battery_stats_clear">@string/proxy_clear_text</string>
 
 </resources>
