Settings: Revamp PixelPlusUI info in about device
Signed-off-by: Jyotiraditya Panda <jyotiraditya@aospa.co>
Signed-off-by: Adithya R <gh0strider.2k18.reborn@gmail.com>
Signed-off-by: smokey18 <kmboplays@gmail.com>

--- a/res/values/ppui_strings.xml
+++ b/res/values/ppui_strings.xml
@@ -18,4 +18,10 @@
     <!-- About Phone screen, Device Codename -->
     <string name="about_device_name">Device</string>
 
+    <!-- PixelPlusUI versioning -->
+    <string name="ppui_version_title">Version</string>
+    <string name="ppui_version_code_title">Codename</string>
+    <string name="ppui_release_type_title">Release type</string>
+    <string name="ppui_maintainer_title">Maintainer</string>
+
 </resources>
