--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -81,4 +81,7 @@
     <string name="volume_button_music_control_title">Playback control</string>
     <string name="volume_button_music_control_summary">When the screen is off, long-pressing volume keys will skip music tracks</string>
 
+    <!-- Battery Stats Menu -->
+    <string name="battery_menu_stats_total">View detailed usage</string>
+
 </resources>
