Settings: Merge PixelPlusUI version name with code and show device name
 * device name can be overridden with ro.wave.device_name incase maintainer
   wants to show a neater and more accurate device name, eg. showing only
   "POCO X3" instead of "Xiaomi M2007J20CI" on karna

 * also move release type text to Title Case (eg. Official or Unofficial)

Signed-off-by: smokey18 <kmboplays@gmail.com>

--- a/res/values/ppui_strings.xml
+++ b/res/values/ppui_strings.xml
@@ -20,7 +20,7 @@
 
     <!-- PixelPlusUI versioning -->
     <string name="ppui_version_title">Version</string>
-    <string name="ppui_version_code_title">Codename</string>
+    <string name="ppui_device_title">Device</string>
     <string name="ppui_release_type_title">Release type</string>
     <string name="ppui_maintainer_title">Maintainer</string>
 
