--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -484,7 +484,7 @@
         <item name="android:layout_marginBottom">@dimen/search_bar_vertical_margin</item>
         <item name="android:layout_marginStart">@dimen/search_bar_side_margin</item>
         <item name="android:layout_marginEnd">@dimen/search_bar_side_margin</item>
-        <item name="cardCornerRadius">@*android:dimen/config_dialogCornerRadius</item>
+        <item name="cardCornerRadius">25dp</item>
         <item name="enforceMaterialTheme">true</item>
         <item name="cardElevation">0dp</item>
         <item name="strokeColor">@color/search_bar_stroke_color</item>
