--- a/res/xml/gesture_navigation_settings.xml
+++ b/res/xml/gesture_navigation_settings.xml
@@ -55,9 +55,18 @@
         settings:textStart="@string/hidden_label"
         settings:textEnd="@string/long_label"/>
 
-    <com.android.settings.custom.preference.SystemSettingSwitchPreference    
+     <com.android.settings.widget.LabeledSeekBarPreference
+        android:key="gesture_navbar_radius"
+        android:title="@string/navbar_radius"
+        android:max="3"
+        android:defaultValue="1"
+        android:selectable="true"
+        settings:textStart="@string/small_label"
+        settings:textEnd="@string/big_label"/>
+
+     <com.android.settings.custom.preference.SystemSettingSwitchPreference   
 	android:key="back_gesture_haptic"
-        android:title="@string/back_gesture_haptic_title"
+	android:title="@string/back_gesture_haptic_title"
         android:summary="@string/back_gesture_haptic_summary"
         android:defaultValue="false" />
 
