--- a/res/xml/power_usage_summary.xml
+++ b/res/xml/power_usage_summary.xml
@@ -24,8 +24,9 @@
     <com.android.settingslib.widget.LayoutPreference
         android:key="battery_header"
         android:title="@string/summary_placeholder"
-        android:selectable="true"
-        android:layout="@layout/battery_header" />
+        android:selectable="false"
+        android:layout="@layout/battery_header"
+        settings:controller="com.android.settings.fuelgauge.BatteryHeaderPreferenceController" />
 
     <com.android.settings.ui.PreferenceDivider
         android:key="preference_divider_line" />
