--- a/res/layout/battery_header.xml
+++ b/res/layout/battery_header.xml
@@ -13,7 +13,7 @@
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
--->
+  -->
 
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -21,43 +21,32 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    style="@style/EntityHeader">
 
     <LinearLayout
-        android:layout_width="200dp"
+        android:layout_width="170dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="72dp"
-        android:layout_marginTop="18dp"
-        android:layout_marginBottom="18dp"
+        android:layout_marginEnd="8dp"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/battery_percent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="6dp"
-            android:gravity="center_vertical"
-            android:textColor="?android:attr/textColorPrimary"
-            android:textSize="32sp"
-            android:fontFamily="sans-serif-medium"/>
+            android:layout_marginTop="12dp"
+            android:textAppearance="@style/TextAppearance.EntityHeaderTitle"
+            android:textSize="36sp" />
 
         <TextView
             android:id="@+id/summary1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="6dp"
-            android:gravity="center_vertical"
-            android:textColor="?android:attr/textColorSecondary"
-            android:textSize="13sp"
-            android:lineSpacingMultiplier="1.3"
-            android:fontFamily="sans-serif-book"/>
-
-        <Button
-            android:id="@+id/btn_show_stats"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="-2dp"
-            android:text="@string/battery_menu_stats_total" />
+            android:layout_marginTop="8dp"
+            android:minLines="3"
+            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"/>
+            android:textColor="?android:attr/textColorPrimary"/>
 
     </LinearLayout>
 
@@ -65,7 +54,6 @@
         android:id="@+id/battery_header_icon"
         android:layout_width="match_parent"
         android:layout_height="@dimen/battery_meter_height"
-        android:minWidth="@dimen/battery_meter_height"
         android:layout_gravity="center"/>
 
 </LinearLayout>
