--- a/res/xml/customisation_extras.xml
+++ b/res/xml/customisation_extras.xml
@@ -27,4 +27,10 @@
             android:fragment="com.pixelizer.fragments.PowerMenu" />
     </PreferenceCategory>
 
+    <com.pixelizer.preference.SecureSettingSwitchPreference
+        android:key="sysui_nav_bar_inverse"
+        android:title="@string/navigation_bar_inverse_title"
+        android:summary="@string/navigation_bar_inverse_summary"
+        android:defaultValue="false" />
+
 </PreferenceScreen>
