--- a/res/xml/customisation_qs.xml
+++ b/res/xml/customisation_qs.xml
@@ -16,4 +16,12 @@
      xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
      android:title="@string/customisation_qs" >
 
+    <Preference
+        android:key="traffic"
+        android:fragment="com.pixelizer.fragments.Traffic"
+        android:order="-10"
+        android:icon="@drawable/ic_traffic"
+        android:title="@string/traffic_title"
+        android:summary="@string/traffic_summary" />
+
 </PreferenceScreen> 
