--- a/res/xml/customisation_extras.xml
+++ b/res/xml/customisation_extras.xml
@@ -16,21 +16,18 @@
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
     android:title="@string/customisation_extras" >
 
-    <PreferenceCategory
-        android:key="hardware_keys_power"
-        android:title="@string/hardware_keys_power_category" >
-
-        <Preference
-            android:key="power_menu"
-            android:title="@string/powermenu_title"
-            android:summary="@string/powermenu_summary"
-            android:fragment="com.pixelizer.fragments.PowerMenu" />
-    </PreferenceCategory>
+    <Preference
+        android:key="power_menu"
+        android:title="@string/powermenu_title"
+        android:summary="@string/powermenu_summary"
+        android:icon="@drawable/power"
+        android:fragment="com.pixelizer.fragments.PowerMenu" />
 
     <com.pixelizer.preference.SecureSettingSwitchPreference
         android:key="sysui_nav_bar_inverse"
         android:title="@string/navigation_bar_inverse_title"
         android:summary="@string/navigation_bar_inverse_summary"
+        android:icon="@drawable/inverse"
         android:defaultValue="false" />
 
 </PreferenceScreen>
