--- a/res/xml/customisation_statusbar.xml
+++ b/res/xml/customisation_statusbar.xml
@@ -16,4 +16,11 @@
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
     android:title="@string/customisation_statusbar" >
 
+        <com.pixelizer.preference.SystemSettingSwitchPreference
+            android:key="double_tap_sleep_gesture"
+            android:title="@string/double_tap_to_sleep_statusbar_title"
+            android:summary="@string/double_tap_to_sleep_statusbar_summary"
+            android:icon="@drawable/dt"
+            android:defaultValue="true" />
+
 </PreferenceScreen> 
