--- a/res/xml/customisation_lockscreen.xml
+++ b/res/xml/customisation_lockscreen.xml
@@ -23,4 +23,11 @@
         android:icon="@drawable/fp"
         android:defaultValue="false" />
 
+     <com.pixelizer.preference.SystemSettingSwitchPreference
+        android:key="double_tap_sleep_lockscreen"
+        android:title="@string/double_tap_to_sleep_lockscreen_title"
+        android:summary="@string/double_tap_to_sleep_lockscreen_summary"
+        android:icon="@drawable/dt"
+        android:defaultValue="true" />
+
 </PreferenceScreen>
