--- a/res/xml/customisation_statusbar.xml
+++ b/res/xml/customisation_statusbar.xml
@@ -23,4 +23,10 @@
             android:icon="@drawable/dt"
             android:defaultValue="true" />
 
+        <com.pixelizer.preference.SystemSettingSwitchPreference
+            android:key="status_bar_brightness_control"
+            android:title="@string/status_bar_toggle_brightness"
+            android:summary="@string/status_bar_toggle_brightness_summary"
+            android:icon="@drawable/brightness"
+            android:defaultValue="false" />
 </PreferenceScreen> 
