--- a/res/drawable/ic_settings_pixelizer.xml
+++ b/res/drawable/ic_settings_pixelizer.xml
@@ -17,20 +17,20 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
-        android:fillColor="#fff"
+        android:fillColor="#2f80ec"
         android:fillAlpha="0.35"
         android:pathData="M16,12a2,2,0,0,1-2,2H10a2,2,0,0,1-2-2,2,2,0,0,1,2-2h4.19A2,2,0,0,1,16,12Z" />
     <path
-        android:fillColor="#fff"
+        android:fillColor="#2f80ec"
         android:fillAlpha="0.65"
         android:pathData="M11.75,10.5H14a0,0,0,0,1,0,0V12a0,0,0,0,1,0,0H11.75a0.75 0.75 ,0,0,1-0.75-0.75v0a0.75 0.75 ,0,0,1,0.75-0.75Z" />
     <path
-        android:fillColor="#fff"
+        android:fillColor="#2f80ec"
         android:pathData="M14.56,10.61A1.51,1.51,0,0,0,14,10.5h0a1.49,1.49,0,0,0-1.45,1.13l0,0.14a1.79,1.79,0,0,0,0,0.23v0a1.48,1.48,0,0,0,0.12 0.56 
 ,1,1,0,0,0,0.15 0.27 ,1.4,1.4,0,0,0,0.49 0.45 l0.12 0.06 a1.44,1.44,0,0,0,0.43 0.13 H14A1.5,1.5,0,0,0,15.5,12,1.48,1.48,0,0,0,14.56,10.61Z" />
     
     <path
-        android:fillColor="#fff"
+        android:fillColor="#2f80ec"
         android:pathData="M13.85,22h-3.7a1.45,1.45,0,0,1-1.44-1.25l-0.27-1.82a7.67,7.67,0,0,1-0.79-0.45l-1.81 0.71 
 A1.47,1.47,0,0,1,4,18.55L2.2,15.45a1.44,1.44,0,0,1,0.37-1.88l1.51-1.15c0-0.14,0-0.28,0-0.42s0-0.28,0-0.42L2.57,10.43a1.44,1.44,0,0,1-0.36-1.89L4.05,5.43a1.45,1.45,0,0,1,1.78-0.62l1.82 
 0.71 a8.89,8.89,0,0,1,0.79-0.45l0.27-1.84A1.45,1.45,0,0,1,10.15,2h3.7A1.46,1.46,0,0,1,15.3,3.25l0.27,1.82a8.73,8.73,0,0,1,0.78 0.45 
