--- a/res/layout/settings_homepage_container.xml
+++ b/res/layout/settings_homepage_container.xml
@@ -49,7 +49,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal|top"
-                    android:gravity="center_vertical"
                     style="@style/SettingsHeaderStyle">
 
                     <TextView
@@ -58,7 +57,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="start"
                         android:textColor="?android:attr/colorAccent"
-                        android:textSize="32sp"
+                        android:textSize="24sp"
                         android:text="@string/dashboard_title" />
 
                     <ImageView
@@ -67,7 +66,7 @@
                         android:paddingTop="@dimen/search_bar_avatar_top_bottom_padding"
                         android:layout_width="@dimen/search_bar_avatar_width"
                         android:layout_height="@dimen/search_bar_avatar_width"
-                        android:layout_gravity="center_vertical|end"
+                        android:layout_gravity="end"
                         android:contentDescription="@string/search_bar_account_avatar_content_description"/>
                 </FrameLayout>
 
