--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -101,10 +101,9 @@
     <color name="homepage_google_background">#331A73E8</color>
     <color name="homepage_wellbeing_background">#3301C853</color>
 
-    <color name="search_bar_stroke_color">#1f000000</color>
     <color name="contextual_card_stroke_color">#1f000000</color>
     <color name="contextual_card_dismissal_background">@*android:color/material_grey_100</color>
-    <color name="contextual_card_background">@android:color/transparent</color>
+    <color name="contextual_card_background">@*android:color/background_device_default_light</color>
     <!-- End of dashboard/homepage icon background colors -->
 
     <!-- Dashboard/homepage icon colors -->
@@ -162,7 +161,7 @@
     <!-- End of QR code scanner colors -->
 
     <!-- Search bar background color -->
-    <color name="search_bar_background">@android:color/transparent</color>
+    <color name="search_bar_background">@*android:color/primary_device_default_settings_light</color>
 
     <!-- Dialog background color -->
     <color name="dialog_background">@*android:color/background_device_default_light</color>
