--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -161,7 +161,7 @@
     <!-- End of QR code scanner colors -->
 
     <!-- Search bar background color -->
-    <color name="search_bar_background">@*android:color/primary_device_default_settings_light</color>
+    <color name="search_bar_background">@android:color/white</color>
 
     <!-- Dialog background color -->
     <color name="dialog_background">@*android:color/background_device_default_light</color>
@@ -192,4 +192,3 @@
     <color name="settings_panel_background_color">@android:color/white</color>
 
 </resources>
-
