--- a/res/drawable/ic_settings_wireless.xml
+++ b/res/drawable/ic_settings_wireless.xml
@@ -14,12 +14,12 @@
     limitations under the License.
 -->
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="24.0dp"
-        android:height="24.0dp"
-        android:viewportWidth="24.0"
-        android:viewportHeight="24.0"
-        android:tint="?android:attr/colorControlNormal">
+    android:width="24dp"
+    android:height="25dp"
+    android:viewportWidth="24"
+    android:viewportHeight="25"
+    android:tint="?android:attr/colorControlNormal">
     <path
-        android:fillColor="#FFFFFFFF"
-        android:pathData="M12,4c3.42,0,6.73,1.27,9.3,3.53L12,18.85L2.7,7.53C5.27,5.27,8.58,4,12,4 M12,2C7.25,2,2.97,4.08,0,7.39L12,22L24,7.39 C21.03,4.08,16.75,2,12,2L12,2z" />
+        android:fillColor="#FFFFFF"
+        android:pathData="M12 3.5c-4.21 0-8.3 1.41-11.62 4C4.41 12.56 7.89 16.87 12 22L23.65 7.5c-3.33-2.59-7.43-4-11.65-4zm0 2c3.07 0 6.09 0.86 8.71 2.45l-1.94 2.43C17.26 9.5 14.88 8.5 12 8.5c-3 0-5.32 1-6.79 1.84l-1.94-2.4C5.91 6.35 8.93 5.5 12 5.5z"/>
 </vector>
